--- a/PopularMovie/app/build.gradle
+++ b/PopularMovie/app/build.gradle
@@ -10,7 +10,13 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        //指定room.schemaLocation生成的文件路径
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,6 +35,12 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'com.google.android.material:material:1.2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
