--- a/PopularMovie/app/build.gradle
+++ b/PopularMovie/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     def room_version = "2.2.5"
